fix(toolbar): fix username display if too long

--- a/static/styles/toolbar.css
+++ b/static/styles/toolbar.css
@@ -106,6 +106,9 @@
 
 .user-username, .user-display-name {
 	padding: 0px;
+	max-width: 7rem;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 .user-username {
